--- a/index.html
+++ b/index.html
@@ -14,18 +14,60 @@
             <div class="collapse navbar-collapse">
                <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> Quem somos </a>
+                        <a class="nav-link" href="#quemsomos"> Quem somos </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> Parceiros </a>
+                        <a class="nav-link" href="#parceiros"> Parceiros </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> Serviços </a>
+                        <a class="nav-link" href="#serviços"> Serviços </a>
                     </li>
                 </ul>
             </div>    
         </nav>
-       
+        <section id="quemsomos">
+            <div class="container-fluid quem-somos text-center margin">
+                <h3 class="margin">Quem Somos</h3>
+                <img src="img/pexels-pixabay.jpg" class="rounded-circle" width="400" height="400">
+                <h3> Imagine aqui um texto bacana! </h3>
+            </div>
+        </section>
+
+        <selection id="parceiros">
+            <div class="container-fluid text-center margin parceiros">
+                <h3>Parceiros</h3>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <img src="img/logo-inovation.png">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/logo-inovation.png">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/logo-inovation.png">
+                    </div>
+                </div>
+            </div>
+        </selection>
+
+        <selection id="serviços">
+            <div class="container-fluid text-center margin serviços">
+                <h3>Serviços</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <p>Mussum Ipsum, cacilds vidis litro abertis. Quem manda na minha terra sou euzis! Posuere libero varius.</p>
+                            <img src="img/pexels-mikhail.jpg" width="100%">
+                        </div>
+                        <div class="col-lg-6">
+                            <p> Suco de cevadiss deixa as pessoas mais interessantis. Atirei o pau no gatis, per gatis num morreus.</p>
+                            <img src="img/pexels-tranmautritam.jpg" width="100%">
+                        </div>
+                    </div>
+                </div>     
+            </div>
+        </selection>
+
     </body>
     
 </html>
