--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
             </div>
         </selection>
 
+        <footer class="container-fluid text-center bg-footer margin">
+            <p> Desenvolvido por Guilherme Cardoso</p>
+        </footer>
+
     </body>
     
 </html>
